fix z-index of menu

--- a/css/style.css
+++ b/css/style.css
@@ -70,13 +70,14 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 1000;
+    z-index: 999;
     background: transparent;
 }
 
 
 /* Стили для области отображения списка добавок */
 #supplements-menu {
+    z-index: 1000;
     border: none;
     margin: 0 10px;
     width: 30%; 
